--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <a href="#header" class="up"><i class="fa-solid fa-arrow-up"></i></a>
+    <div class="header" id="header">
         <div class="container">
             <div class="logo">Elzero</div>
             <div class="link">
@@ -694,5 +695,6 @@
         &copy; 2025 <span>Elzero</span> All Right Reserved
     </div>
 </body>
+
 
 </html>
