--- a/index.html
+++ b/index.html
@@ -593,8 +593,7 @@
                 </div>
                 <div class="current-video">
                     <img src="Elzero_Template/current-Videos.webp" alt="">
-                    <p><i title="keep dreaming" class="fa-regular fa-circle-play fa-beat-fade"></i>Fang Yuan betray Bai
-                        Ning Bing</p>
+                    <p><i title="keep dreaming" class="fa-regular fa-circle-play fa-beat-fade"></i>Bai Ning Bing betrays Fang Yuan</p>
                 </div>
             </div>
         </div>
@@ -698,3 +697,4 @@
 
 
 </html>
+
